# ascii-animation

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
.superpowers/sdd/: task-10-report.md  task-8-report.md
docs/superpowers/plans/: 2026-06-24-release-workflow.md
docs/superpowers/specs/: 2026-06-23-ascii-animation-design.md  2026-06-24-release-workflow-design.md
src/: cli.rs  error.rs  lib.rs  main.rs  runtime.rs  scene.rs  tui.rs  viewport.rs
src/presets/: galaxy.rs  mod.rs  text_art.rs  text_art_fonts.rs
src/render/: ansi.rs  buffer.rs  layout.rs  mod.rs
tests/: cli.rs  galaxy.rs  preset_validation.rs  release_workflow.rs  render_composition.rs  scene_config.rs  text_art.rs
tests/snapshots/: galaxy__galaxy_frame_is_deterministic_with_fixed_seed.snap
