[package]
name = "ascii-animation"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
anyhow = "1.0"
arboard = "3.6.1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "5.0"
figlet-rs = "1"
rand = "0.8"
ratatui = "0.28"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
insta = "1.40"
predicates = "3.1"
tempfile = "3.10"
